# quartz

./: AUTHORS  CMakeLists.txt  Doxyfile  README-BENCHMARKS-TESTING.md  README.md  TODO.dox  license.txt  nvmemul-orig.ini  nvmemul.dox  nvmemul.ini
bench/: CMakeLists.txt
bench/.svn/: all-wcprops  entries
bench/memlat/.svn/: all-wcprops  entries
bench/memlat/.svn/text-base/: CMakeLists.txt.svn-base  memlat.c.svn-base
bench/multilat/: CMakeLists.txt  multilat.c
bench/multilat/.svn/: all-wcprops  entries
bench/multilat/.svn/text-base/: multilat.c.svn-base
bench/new_memlat/: CMakeLists.txt  memlat.c  memlat.sh
bench/new_memlat/.svn/: all-wcprops  entries
bench/new_memlat/.svn/text-base/: memlat.sh.svn-base
benchmark-tests/: bandwidth-model-building.sh  memlat-bench-test-10M-single-socket.sh  memlat-bench-test-10M.sh  memlat-orig-lat-test-single-socket.sh  memlat-orig-lat-test.sh  nvmemul-bandwidth.ini  nvmemul-debug.ini  nvmemul-orig.ini
benchmark-tests/.svn/: all-wcprops  entries
benchmark-tests/.svn/text-base/: memlat-bench-test-10M.sh.svn-base  memlat-orig-lat-test.sh.svn-base  nvmemul-bandwidth.ini.svn-base  nvmemul-debug.ini.svn-base
cmake/: FindLibxml.cmake  FindNuma.cmake
doc/.svn/: all-wcprops  entries
include/quartz/: fam_atomic.h
scripts/: install.sh  runenv.sh  setupdev.sh  turboboost.sh
scripts/.svn/: all-wcprops  entries
scripts/.svn/text-base/: install.sh.svn-base
src/: CMakeLists.txt
src/.svn/: all-wcprops  entries
src/.svn/text-base/: CMakeLists.txt.svn-base
src/dev/: CMakeLists.txt  ioctl_query.h  pmc.c
src/dev/.svn/: all-wcprops  entries
src/dev/.svn/text-base/: Makefile.svn-base
src/lib/: CMakeLists.txt  config.c  config.h  debug.c  debug.h  dev.c  dev.h  error.h  errorno.h  fam_atomic.c  fam_atomic_model.c  fam_atomic_model.h  graph.c  graph.h  init.c  interpose.c  interpose.h  libpthread.c  libpthread.h  measure.h  measure_bw.c  measure_lat.c  misc.c  misc.h  model.h  model_bw.c  model_lat.c  pflush.c  pflush.h  pmalloc.c  process_rank.c  queue.c  queue.h  stat.c  stat.h  thread.c  thread.h  throttle.c  throttle.h  topology.c  (+3 more)
src/lib/.svn/: all-wcprops  entries
src/lib/.svn/text-base/: CMakeLists.txt.svn-base  debug.c.svn-base  debug.h.svn-base  error.h.svn-base  init.c.svn-base  interpose.c.svn-base  measure_bw.c.svn-base  misc.c.svn-base  misc.h.svn-base  model.h.svn-base  model_lat.c.svn-base  monotonic_timer.c.svn-base  monotonic_timer.h.svn-base  pmalloc.h.svn-base  stat.c.svn-base  thread.c.svn-base  thread.h.svn-base  topology.c.svn-base  topology.h.svn-base
src/lib/cpu/: CMakeLists.txt  cpu.c  cpu.h  haswell-papi.h  haswell.h  ivybridge-papi.h  ivybridge.h  known_cpus.h  pmc-papi.c  pmc-papi.h  pmc.c  pmc.h  sandybridge-papi.h  sandybridge.h  xeon-ex.h
src/lib/cpu/.svn/: all-wcprops  entries
src/lib/cpu/.svn/text-base/: CMakeLists.txt.svn-base  cpu.c.svn-base  ivybridge-papi.h.svn-base  known_cpus.h.svn-base  pmc-papi.c.svn-base  pmc-papi.h.svn-base  pmc.c.svn-base  pmc.h.svn-base  sandybridge-papi.h.svn-base  sandybridge.h.svn-base
src/util/: CMakeLists.txt
src/util/quartz/: CMakeLists.txt  cmd_create.c  cmd_destroy.c  cmd_discover.c  cmd_make.c  cmd_show.c  common.c  common.h  main.c
test/: CMakeLists.txt  test_dev.cc  test_fam.c  test_graph.c  test_interpose.cc  test_multithread.c  test_mutex.cc  test_nvm_remote_dram.c  test_thread.cc
test/.svn/: all-wcprops  entries
test/.svn/text-base/: test_multithread.c.svn-base  test_nvm.c.svn-base
